# smart-todo-III

./: AGENT_MCP_TOOLS_FIX.md  CLAUDE.md  MODEL_CONFIGURATION_FIX.md  test_chat_integration.py
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: alembic.ini  check_db.py  config.py  diagnose_task_issue.py  get_user.py  main.py  models.py  pyproject.toml  setup_test_user.py  test_agent_import.py  test_ai_chatbot.py  test_manual_crud.py  test_task_agent_import.py  test_task_creation.py  test_task_endpoint.py  test_with_real_user.py
backend/alembic/: env.py
backend/alembic/versions/: 1a899cc0f9b5_add_priority_due_date_status_updated_at_.py  32f5b9a61834_add_conversation_and_message_tables.py
backend/models/: __init__.py  chat_models.py
backend/routes/: chat.py  tasks.py
backend/services/: chat_service.py
backend/task_agents/: agent.py  tools.py
backend/tests/: test_agent_tools.py  test_chat.py
backend/tools/: mcp_tools.py
docs/: API_ENDPOINT_FIX.md  ISSUE_FIX_SUMMARY.md  ISSUE_RESOLUTION_SUMMARY.md  TASK_AND_CHAT_PERSISTENCE_FIX.md  auth-integration.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/lib/: auth.test.ts  auth.ts
frontend/src/types/: chat.ts  index.ts  validation.ts
history/prompts/003-ai-chatbot-mcp/: 0001-fix-chatbot-tool-calling-json-error.red.prompt.md  0002-deep-fix-tool-invocation-malformed-json.red.prompt.md  0003-fix-openrouter-model-rate-limiting.misc.prompt.md  (+4 more)
specs/003-ai-chatbot-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+24 files in other folders)
